Enclose buttons with row container

--- a/index.html
+++ b/index.html
@@ -10,25 +10,35 @@
         <input type="text">
       </div>
       <div class="buttons">
-        <button id="btn_clr">CLR</button>
-        <button id="btn_del">DEL</button>
-        <button id="btn_equal">=</button>
-        <button id="btn_one">1</button>
-        <button id="btn_two">2</button>
-        <button id="btn_three">3</button>
-        <button id="btn_add">+</button>
-        <button id="btn_four">4</button>
-        <button id="btn_five">5</button>
-        <button id="btn_six">6</button>
-        <button id="btn_subtract">-</button>
-        <button id="btn_seven">7</button>
-        <button id="btn_eight">8</button>
-        <button id="btn_nine">9</button>
-        <button id="btn_multiple">x</button>
-        <button id="btn_sign">+/-</button>
-        <button id="btn_zero">0</button>
-        <button id="btn_dot">.</button>
-        <button id="btn_divide">/</button>
+        <div class="row">
+          <button id="btn_clr">CLR</button>
+          <button id="btn_del">DEL</button>
+          <button id="btn_equal">=</button>
+        </div>
+        <div class="row">
+          <button id="btn_one">1</button>
+          <button id="btn_two">2</button>
+          <button id="btn_three">3</button>
+          <button id="btn_add">+</button>
+        </div>
+        <div class="row">
+          <button id="btn_four">4</button>
+          <button id="btn_five">5</button>
+          <button id="btn_six">6</button>
+          <button id="btn_subtract">-</button>
+        </div>
+        <div class="row">
+          <button id="btn_seven">7</button>
+          <button id="btn_eight">8</button>
+          <button id="btn_nine">9</button>
+          <button id="btn_multiply">x</button>
+        </div>
+        <div class="row">
+          <button id="btn_sign">+/-</button>
+          <button id="btn_zero">0</button>
+          <button id="btn_dot">.</button>
+          <button id="btn_divide">/</button>
+        </div>
       </div>
     </div>
   </body>
