Setup initial styling of the calculator

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Calculator</title>
+    <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
     <div class="calculator">
       <div class="display">
-        <input type="text">
+        <input class="textDisplay" type="text" disabled="disabled">
       </div>
       <div class="buttons">
         <div class="row">
