Add value to buttons and link script

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Calculator</title>
     <link rel="stylesheet" href="./styles/styles.css">
+    <script src="./scripts/scripts.js" defer></script>
   </head>
   <body>
     <div class="calculator">
@@ -12,33 +13,33 @@
       </div>
       <div class="buttons">
         <div class="row">
-          <button id="btn_clr">CLR</button>
-          <button id="btn_del">DEL</button>
-          <button id="btn_equal">=</button>
+          <button id="btn_clr" value="clr">CLR</button>
+          <button id="btn_del" value="del">DEL</button>
+          <button id="btn_equal" value="eql">=</button>
         </div>
         <div class="row">
-          <button id="btn_one">1</button>
-          <button id="btn_two">2</button>
-          <button id="btn_three">3</button>
-          <button id="btn_add">+</button>
+          <button id="btn_one" value="1">1</button>
+          <button id="btn_two" value="2">2</button>
+          <button id="btn_three" value="3">3</button>
+          <button id="btn_add" value="+">+</button>
         </div>
         <div class="row">
-          <button id="btn_four">4</button>
-          <button id="btn_five">5</button>
-          <button id="btn_six">6</button>
-          <button id="btn_subtract">-</button>
+          <button id="btn_four" value="4">4</button>
+          <button id="btn_five" value="5">5</button>
+          <button id="btn_six" value="6">6</button>
+          <button id="btn_subtract" value="-">-</button>
         </div>
         <div class="row">
-          <button id="btn_seven">7</button>
-          <button id="btn_eight">8</button>
-          <button id="btn_nine">9</button>
-          <button id="btn_multiply">x</button>
+          <button id="btn_seven" value="7">7</button>
+          <button id="btn_eight" value="8">8</button>
+          <button id="btn_nine" value="9">9</button>
+          <button id="btn_multiply" value="x">x</button>
         </div>
         <div class="row">
-          <button id="btn_sign">+/-</button>
-          <button id="btn_zero">0</button>
-          <button id="btn_dot">.</button>
-          <button id="btn_divide">/</button>
+          <button id="btn_sign" value="sign">+/-</button>
+          <button id="btn_zero" value="0">0</button>
+          <button id="btn_dot" value=".">.</button>
+          <button id="btn_divide" value="/">/</button>
         </div>
       </div>
     </div>
