Create and use main() function to initialize Screen

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="./scripts/scripts.js" defer></script>
   </head>
-  <body>
+  <body onload="main()">
     <div class="calculator">
       <div class="display">
         <input class="textDisplay" type="text" disabled="disabled">
