Separate display into main and sub

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body onload="main()">
     <div class="calculator">
       <div class="display">
-        <input class="textDisplay" type="text" disabled="disabled">
+        <input class="sub" type="text" disabled="disabled">
+        <input class="main" type="text" disabled="disabled">
       </div>
       <div class="buttons">
         <div class="row">
