--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <button id="btn_seven" value="7">7</button>
           <button id="btn_eight" value="8">8</button>
           <button id="btn_nine" value="9">9</button>
-          <button id="btn_multiply" value="x">x</button>
+          <button id="btn_multiply" value="×">x</button>
         </div>
         <div class="row">
           <button id="btn_sign" value="sign">+/-</button>
