--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
       </div>
       <div class="buttons">
         <div class="row">
-          <button id="btn_clr" value="clr">CLR</button>
-          <button id="btn_del" value="del">DEL</button>
-          <button id="btn_equal" value="eql">=</button>
+          <button class="edit" id="btn_clr" value="clr">CLR</button>
+          <button class="edit" id="btn_del" value="del">DEL</button>
+          <button class="operator" id="btn_equal" value="eql">=</button>
         </div>
         <div class="row">
-          <button id="btn_one" value="1">1</button>
-          <button id="btn_two" value="2">2</button>
-          <button id="btn_three" value="3">3</button>
-          <button id="btn_add" value="+">+</button>
+          <button class="number" id="btn_one" value="1">1</button>
+          <button class="number" id="btn_two" value="2">2</button>
+          <button class="number" id="btn_three" value="3">3</button>
+          <button class="operator" id="btn_add" value="+">+</button>
         </div>
         <div class="row">
-          <button id="btn_four" value="4">4</button>
-          <button id="btn_five" value="5">5</button>
-          <button id="btn_six" value="6">6</button>
-          <button id="btn_subtract" value="-">-</button>
+          <button class="number" id="btn_four" value="4">4</button>
+          <button class="number" id="btn_five" value="5">5</button>
+          <button class="number" id="btn_six" value="6">6</button>
+          <button class="operator" id="btn_subtract" value="-">-</button>
         </div>
         <div class="row">
-          <button id="btn_seven" value="7">7</button>
-          <button id="btn_eight" value="8">8</button>
-          <button id="btn_nine" value="9">9</button>
-          <button id="btn_multiply" value="×">x</button>
+          <button class="number" id="btn_seven" value="7">7</button>
+          <button class="number" id="btn_eight" value="8">8</button>
+          <button class="number" id="btn_nine" value="9">9</button>
+          <button class="operator" id="btn_multiply" value="×">x</button>
         </div>
         <div class="row">
-          <button id="btn_sign" value="sign">+/-</button>
-          <button id="btn_zero" value="0">0</button>
-          <button id="btn_dot" value=".">.</button>
-          <button id="btn_divide" value="/">/</button>
+          <button class="symbol" id="btn_sign" value="sign">+/-</button>
+          <button class="number" id="btn_zero" value="0">0</button>
+          <button class="symbol" id="btn_dot" value=".">.</button>
+          <button class="operator" id="btn_divide" value="/">/</button>
         </div>
       </div>
     </div>
