Change equal button class to equal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
           <button class="edit" id="btn_clr" value="clr">CLR</button>
           <button class="edit" id="btn_del" value="del">DEL</button>
-          <button class="operator" id="btn_equal" value="eql">=</button>
+          <button class="equal" id="btn_equal" value="eql">=</button>
         </div>
         <div class="row">
           <button class="number" id="btn_one" value="1">1</button>
